Create connection class for marvel api

--- a/.env.default
+++ b/.env.default
@@ -3,3 +3,6 @@ RAILS_PORT=3000
 RAILS_BIND=0.0.0.0
 COMIC_APP_DATABASE_PASSWORD=COMIC_APP_DATABASE_PASSWORD
 POSTGRES_PORT=5432
+MARVEL_DEFAULT_URL=http://gateway.marvel.com/v1/public/
+MARVEL_PUBLIC_KEY=YOUR_PUBLIC_KEY
+MARVEL_PRIVATE_KEY=YOUR_PRIVATE_KEY
